=======
CHANGES
=======

0.6.2 (unreleased)
------------------

- Updated tests to run with `zope.schema` >= 3.6, thus requiring at least
  this version.


0.6.1 (2010-10-18)
------------------

- Added french translations.

- Added doctests to ``long_description`` so they appear on PyPI.


0.6.0 (2009-01-26)
------------------

- Humanized exception's doc strings.
- Added translations support.
- Added german translations.
- Added russian translations.
- Changed mailing list address to zope-dev at zope.org, as
  zope3-dev is retired now.

0.5.0 (2008-10-21)
------------------

- Initial release on PyPI.


0.2.0 (2007-09-21)
------------------

- Feature: Added ``DateSelect`` field.


0.1.0 (2007-06-04)
------------------

- Initial release.