@@ -11,16 +11,11 @@
 # FOR A PARTICULAR PURPOSE.
 #
 ##############################################################################
-"""
-$Id:$
-"""
-__docformat__ = "reStructuredText"
 
-import unittest
 from zope.schema.interfaces import RequiredMissing
 from zope.schema.tests.test_field import FieldTestBase
-from zope.testing import doctest
-from zope.testing.doctestunit import DocFileSuite
+import doctest
+import unittest
 
 from z3c.schema.baseurl import BaseURL
 from z3c.schema.baseurl import InvalidBaseURL
@@ -57,10 +52,7 @@ class BaseURLTest(FieldTestBase):
 
 def test_suite():
     return unittest.TestSuite((
-        DocFileSuite('README.txt',
+        doctest.DocFileSuite('README.txt',
             optionflags=doctest.NORMALIZE_WHITESPACE|doctest.ELLIPSIS,),
         unittest.makeSuite(BaseURLTest),
         ))
-
-if __name__ == '__main__':
-    unittest.main(defaultTest='test_suite')
